--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Box",
+  "name": "File Picker",
   "author": {
     "name": "Zendesk Customer Success",
     "email": "success_apps@zendesk.com",
@@ -7,7 +7,7 @@
   },
   "defaultLocale": "en",
   "private": true,
-  "location": "ticket_sidebar",
+  "location": ["ticket_sidebar", "new_ticket_sidebar", "nav_bar"],
   "version": "1.0",
   "frameworkVersion": "1.0"
 }
